// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should Button danger to match snapshot 1`] = `
<button
  className="button -danger"
  onClick={[Function]}
>
  Click me Danger
</button>
`;

exports[`should Button default to match snapshot 1`] = `
<button
  className="button"
  onClick={[Function]}
>
  Click me
</button>
`;

exports[`should Button success to match snapshot 1`] = `
<button
  className="button -success"
  onClick={[Function]}
>
  Click me Success
</button>
`;
